<resources>
    <string name="app_name">Trader Station</string>
    <string name="title_activity_dashboard">Trader Station</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_login">Login</string>
    <string name="server">http://servicetrader.mawblanja.com/login_android.php</string>
    <string name="economic_calendar">Economic\nCalendar</string>
    <string name="event">Event\n</string>
    <string name="webinar">Webinar \n</string>
    <string name="competition">Competition \n</string>
    <string name="broker">Broker \n</string>
    <string name="rebate_broker">Rebate\nBroker</string>
    <string name="trader_performance">Trader\nPerformance</string>
    <string name="ea_performance">EA\nPerformance</string>
    <string name="pamm">PAMM \n</string>
    <string name="gallery">Gallery \n</string>
    <string name="promotion">Promotion \n</string>
    <string name="shop">Shop \n</string>
    <string-array name="navigation_drawer_items_array">
        <item>Connect</item>
        <item>Fixtures</item>
        <item>Table</item>
    </string-array>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
